[package]
name = "crick-player-api"
version = "0.1.0"
authors = ["upgundecha <upgundecha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"